--- a/views/index.html
+++ b/views/index.html
@@ -287,7 +287,7 @@
         	
         	var data = [
         		{
-        			'name':'Rue de lappe',
+        			'name':'Rue de lapp',
         			'hashtags': ["bastille","monop'","roquette","embrouille"]
         		},
         		{
