--- a/public/css/joyride.css
+++ b/public/css/joyride.css
@@ -2,11 +2,11 @@
 body {
   position: relative;
 }
- 
-#joyRideTipContent { display: none; }
- 
-.joyRideTipContent { display: none; }
 
+#joyRideTipContent { display: none; }
+
+.joyRideTipContent { display: none; }
+ 
 /* Default styles for the container */
 .joyride-tip-guide {
   position: absolute;
@@ -15,17 +15,18 @@ body {
   display: none;
   color: #fff;
   width: 300px;
-  z-index: 100000;
-  top: 44px!important; /* keeps the page from scrolling when calculating position */
+  z-index: 10000000; /* keeps the page from scrolling when calculating position */
   left: 0;
   font: normal 13px 'Karla';
      -moz-border-radius: 4px;
   -webkit-border-radius: 4px;
           border-radius: 4px;
+  margin-top: 17px;
+  margin-left: -11px;
 }
 
 .joyride-content-wrapper {
-  padding: 12px 20px 20px 20px;
+  padding: 10px 10px 15px 15px;
 }
 
 /* Mobile */
@@ -37,7 +38,7 @@ body {
     border-radius: 0;
     left: 2.5% !important;
   }
-  .joyride-tip-guide-wrapper { 
+  .joyride-tip-guide-wrapper {
     width: 100%;
   }
 }
@@ -47,7 +48,7 @@ body {
 .joyride-tip-guide span.joyride-nub {
   display: block;
   position: absolute;
-  left: 9px;
+  left: 22px;
   width: 0;
   height: 0;
   border: solid 14px;
@@ -158,21 +159,17 @@ body {
 }
 
 /* Button Style */
-.joyride-tip-guide[data-index="0"]{
-  display:block;
-}
 .joyride-tip-guide .joyride-next-tip {
   width: auto;
-  display:none!important;
   padding: 6px 18px 4px;
   font-size: 13px;
   text-decoration: none;
   color: rgb(255,255,255);
-  border: solid 1px rgb(199, 16, 16);
+  border: solid 1px rgb(0,60,180);
   background: rgb(0,99,255);
   background: -moz-linear-gradient(top, rgb(0,99,255) 0%, rgb(0,85,214) 100%);
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgb(0,99,255)), color-stop(100%,rgb(0,85,214)));
-  background: -webkit-linear-gradient(top, rgb(255, 71, 0) 0%,rgb(226, 9, 9) 100%);
+  background: -webkit-linear-gradient(top, rgb(0,99,255) 0%,rgb(0,85,214) 100%);
   background: -o-linear-gradient(top, rgb(0,99,255) 0%,rgb(0,85,214) 100%);
   background: -ms-linear-gradient(top, rgb(0,99,255) 0%,rgb(0,85,214) 100%);
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0063ff', endColorstr='#0055d6',GradientType=0 );
@@ -184,19 +181,28 @@ body {
   -webkit-box-shadow: 0px 1px 0px rgba(255,255,255,0.3) inset;
      -moz-box-shadow: 0px 1px 0px rgba(255,255,255,0.3) inset;
           box-shadow: 0px 1px 0px rgba(255,255,255,0.3) inset;
-  display: block;      margin-top: 5px;      width: 70%;      text-align: center;      margin: 11px auto 1px;      padding: 7px;
 }
 
 .joyride-next-tip:hover {
-  opacity: .9;
+  color: rgb(255,255,255) !important;
+  border: solid 1px rgb(0,60,180) !important;
+  background: rgb(43,128,255);
+  background: -moz-linear-gradient(top, rgb(43,128,255) 0%, rgb(29,102,211) 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgb(43,128,255)), color-stop(100%,rgb(29,102,211)));
+  background: -webkit-linear-gradient(top, rgb(43,128,255) 0%,rgb(29,102,211) 100%);
+  background: -o-linear-gradient(top, rgb(43,128,255) 0%,rgb(29,102,211) 100%);
+  background: -ms-linear-gradient(top, rgb(43,128,255) 0%,rgb(29,102,211) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2b80ff', endColorstr='#1d66d3',GradientType=0 );
+  background: linear-gradient(top, rgb(43,128,255) 0%,rgb(29,102,211) 100%);
 }
- 
+
 .joyride-timer-indicator-wrap {
-  width: 90%;
+  width: 50px;
   height: 3px;
   border: solid 1px rgba(255,255,255,0.1);
-  margin: 9px auto;
-  margin-bottom: -7px;
+  position: absolute;
+  right: 17px;
+  bottom: 16px;
 }
 .joyride-timer-indicator {
   display: block;
