--- a/public/css/fontello/css/fontello-codes.css
+++ b/public/css/fontello/css/fontello-codes.css
@@ -45,3 +45,5 @@
 .icon-circle-empty:before { content: '\e82b'; } /* '' */
 .icon-circle-thin:before { content: '\e82c'; } /* '' */
 .icon-moon:before { content: '\e82d'; } /* '' */
+.icon-feather:before { content: '\e82e'; } /* '' */
+.icon-pencil:before { content: '\e82f'; } /* '' */
