--- a/public/css/fontello/css/fontello.css
+++ b/public/css/fontello/css/fontello.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?1766693');
-  src: url('../font/fontello.eot?1766693#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff?1766693') format('woff'),
-       url('../font/fontello.ttf?1766693') format('truetype'),
-       url('../font/fontello.svg?1766693#fontello') format('svg');
+  src: url('../font/fontello.eot?98619261');
+  src: url('../font/fontello.eot?98619261#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff?98619261') format('woff'),
+       url('../font/fontello.ttf?98619261') format('truetype'),
+       url('../font/fontello.svg?98619261#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,7 +14,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?1766693#fontello') format('svg');
+    src: url('../font/fontello.svg?98619261#fontello') format('svg');
   }
 }
 */
@@ -100,3 +100,5 @@
 .icon-circle-empty:before { content: '\e82b'; } /* '' */
 .icon-circle-thin:before { content: '\e82c'; } /* '' */
 .icon-moon:before { content: '\e82d'; } /* '' */
+.icon-feather:before { content: '\e82e'; } /* '' */
+.icon-pencil:before { content: '\e82f'; } /* '' */
