--- a/public/css/fontello/css/fontello.css
+++ b/public/css/fontello/css/fontello.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?98619261');
-  src: url('../font/fontello.eot?98619261#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff?98619261') format('woff'),
-       url('../font/fontello.ttf?98619261') format('truetype'),
-       url('../font/fontello.svg?98619261#fontello') format('svg');
+  src: url('../font/fontello.eot?15833801');
+  src: url('../font/fontello.eot?15833801#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff?15833801') format('woff'),
+       url('../font/fontello.ttf?15833801') format('truetype'),
+       url('../font/fontello.svg?15833801#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,7 +14,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?98619261#fontello') format('svg');
+    src: url('../font/fontello.svg?15833801#fontello') format('svg');
   }
 }
 */
@@ -64,7 +64,7 @@
 .icon-attention:before { content: '\e807'; } /* '' */
 .icon-trash-empty:before { content: '\e808'; } /* '' */
 .icon-facebook:before { content: '\e809'; } /* '' */
-.icon-star:before { content: '\e80a'; } /* '' */
+.icon-note-beamed:before { content: '\e80a'; } /* '' */
 .icon-users:before { content: '\e80b'; } /* '' */
 .icon-user-1:before { content: '\e80c'; } /* '' */
 .icon-user-add:before { content: '\e80d'; } /* '' */
@@ -102,3 +102,13 @@
 .icon-moon:before { content: '\e82d'; } /* '' */
 .icon-feather:before { content: '\e82e'; } /* '' */
 .icon-pencil:before { content: '\e82f'; } /* '' */
+.icon-desktop:before { content: '\e830'; } /* '' */
+.icon-desktop-1:before { content: '\e831'; } /* '' */
+.icon-linkedin:before { content: '\e832'; } /* '' */
+.icon-retweet:before { content: '\e833'; } /* '' */
+.icon-spin6:before { content: '\e834'; } /* '' */
+.icon-heart:before { content: '\e835'; } /* '' */
+.icon-heart-empty:before { content: '\e836'; } /* '' */
+.icon-star-1:before { content: '\e837'; } /* '' */
+.icon-star-empty:before { content: '\e838'; } /* '' */
+.icon-lock-open:before { content: '\e839'; } /* '' */
