--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -1,7 +1,7 @@
 /* Générales */
 
-#profileWrap {  
-    width: 880px;  
+#profileWrap {
+    width: 880px;
 }
 .row-title {
     text-transform: uppercase;
@@ -36,8 +36,8 @@
 .row-title .icon:not(.active):hover {
     background: #fff;
 }
-.row-body{
-	font-family: 'Karla';
+.row-body {
+    font-family: 'Karla';
 }
 .row-subtitle {
     text-align: center;
@@ -54,7 +54,7 @@
 }
 .row-profile {
     margin-bottom: 30px;
-    padding-bottom: 20px;
+    padding-bottom: 30px;
 }
 /* Pictures */
 
@@ -86,31 +86,7 @@
 .picture-hashtag {
     text-align: center;
     width: 90%;
-    margin: 0 
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    auto;
+    margin: 0 auto;
     position: relative;
     top: -4px;
 }
@@ -118,29 +94,7 @@
     width: 114px;
     padding: 3px 3px 3px 6px;
     color: #B7B7B7;
-    border-bottom: 1px 
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    solid 
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    transparent;
+    border-bottom: 1px solid transparent;
     transition: all .5s;
     font-family: 'Karla';
 }
@@ -171,7 +125,7 @@
     cursor: pointer;
     transition: all .3s;
 }
-.picture-edit i:hover {
+.picture-edit i:not(.selected):hover {
     background: #eee;
 }
 .picture-edit i:first-child {
@@ -206,113 +160,275 @@
     cursor: pointer;
 }
 /* Informations */
-.row-divider {
 
-margin: 20px 0;
+.row-divider {
+    margin: 20px 0;
 }
 .row-input {
-width: 49%;
-display: inline-block;
-background-color: white;
-padding: 10px 0 10px 13px;
-margin: 5px 0;
-position: relative;
-color: #A5A5A5;
-height: 43px;
+    width: 49%;
+    display: inline-block;
+    background-color: white;
+    padding: 10px 0 10px 13px;
+    margin: 5px 0;
+    position: relative;
+    color: #D6D6D6;
+    height: 43px;
 }
 .row-input input[type="text"] {
-
-width: 78%;
-
-padding-left: 7px;
+    width: 78%;
+    padding-left: 7px;
 }
-.row-input label {
-
+.row-input label {} .mood-wrap,
+.drink-wrap {
+    display: inline-block;
 }
-.mood-wrap, .drink-wrap {
-
-display: inline-block;
+.mood,
+.drink {
+    display: inline-block;
+    font-size: 13px;
+    padding: 5px 9px;
+    border-radius: 2px;
+    transition: all 
+    
+    
+    
+    
+    ease-out .3s;
+    border: 1px 
+    solid white;
 }
-.mood, .drink {
-display: inline-block;
-font-size: 13px;
-padding: 5px 9px;
-border-radius: 2px;
-transition: all 
-ease-out .3s;
-border-bottom: 2px solid white;}
-
 .mood.selected,
 .drink.selected {
-background: #F7F7F7;
+    background: #F7F7F7;
+    color: #313131;
 }
-
 .row.editing label {
-    color:#ccc
-;
-    -webkit-transition: all                                                                                                                                        
-    ease-out .15s;
-    transition: all      
-    
-     
-    
-    
-    ease-out .15s;
+    color: #ccc;
+    -webkit-transition: all ease-out .15s;
+    transition: all ease-out .15s;
 }
-
 .row.editing .row-input:hover label {
-    color:#555;
+    color: #555;
 }
-
 .row.editing .row-input {
-    color:#555;
+    color: #555;
 }
-
 .row.editing .mood,
-.row.editing .drink{
+.row.editing .drink {
     /* background: #F7F7F7; */
 }
 .row.editing .mood.selected,
 .row.editing .drink.selected {
-	background-color: #E4E4E4;
+    background-color: #E4E4E4;
 }
 .row.editing .mood.modified,
 .row.editing .drink.modified {
-	background-color: #E4E4E4;
+    background-color: #E4E4E4;
 }
-.inspire{
-	float: right;
-	position: relative;
-	opacity:0;
-	font-size: 12px;
-	right: 5px;
-	cursor: pointer;
-	top: 17px;
-	color: #bbb;
-	transition: all 
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	ease-out .3s;
+.inspire {
+    float: right;
+    position: relative;
+    opacity: 0;
+    font-size: 12px;
+    right: 5px;
+    cursor: pointer;
+    top: 17px;
+    color: #bbb;
+    transition: all ease-out .3s;
 }
-
 .row.editing .row-motto:hover .inspire {
-    opacity:1;
+    opacity: 1;
 }
-
-
 /* Friends */
-/* Questionnaire OKC */
+
+.row-friend-item {
+    width: 80px;
+    display: inline-block;
+    background-color: white;
+    margin: 0 3px;
+} .row-friend-img {
+    text-align: center;
+} .row-friend-img img {
+    width: 80%;
+} .row-friend-name {
+    background-color: #FFF;
+    border-top: 1px                                                                                                                                                                                          
+    solid #A0A0A0;
+    font-size: 14px;
+    text-align: center;
+    padding: 6px 0px;
+} .row-friend-actions {}
+
+
+
+/* Sous titre */
+.row-subheader {
+    text-align: center;
+}
+.row-subheader-bar {
+    border-bottom: 1px                                                                                                                                                                                                                                                                          
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    solid                                                                                                                                                                                                    #D0D0D0;
+    border-top: 1px           
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    solid           #F3F3F3;
+    margin: 3px 10px;
+    width: 130px;
+    display:inline-block;
+}
+.row-subheader-text {
+    display:inline-block;
+    color: #AFAFAF;
+    font-size: 12px;
+}
+.row-subheader-text span {
+
+}
